--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,63 @@ html {
 }
 
 body {
-  background-color: #000;
+  background-image: url("../image/bg-galaxy.jpg");
+  background-repeat: repeat;
+  background-attachment: fixed;
 }
 
 /* ============= RESUABLE CONPONENT ==================== */
+.audio {
+  position: fixed;
+  right: 20px;
+  bottom: 50px;
+}
 
+.audio button {
+  width: 50px;
+  height: 30px;
+  border: 0;
+  outline: none;
+  position: relative;
+  background: none;
+}
+
+.audio button .tooltip {
+  background-color: #000;
+  color: #fff;
+  display: inline-block;
+  position: absolute;
+  top: -30px;
+  left: -10px;
+  padding: 5px;
+  border-radius: 5px;
+  visibility: hidden;
+}
+
+.audio button .tooltip::after {
+  content: "";
+  display: block;
+  position: absolute;
+  margin-left: -5px;
+  top: 25px;
+  left: 50%;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+  border-width: 5px;
+}
+
+/*.audio button img {
+  width: 100%;
+}*/
+
+.audio button i {
+  font-size: 2.5rem;
+  color: #FF214F;
+}
+
+.audio button:hover .tooltip {
+  visibility: visible;
+}
 /* ====================================================== */
 /* ================ HEADER ============================== */
 /* =========================================================== */
@@ -31,7 +83,7 @@ body {
       to bottom,
       rgba(138, 92, 92, 0.8),
       rgba(0, 0, 0, 1) 98%
-    ),
+    ), 
     url("../image/footer-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -289,12 +341,14 @@ a {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("../image/advice-advise-advisor-7096.jpg");
   background-attachment: fixed;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
 .section-title {
   /* background-color: #fff; */
-  background-color: #000;
+  /*background-color: #000;*/
+  background-image: url("../image/bg-galaxy.jpg");
   text-align: center;
   font-size: 2.5rem;
   padding: 40px;
@@ -325,7 +379,8 @@ a {
   flex-wrap: wrap;
   justify-content: center;
   padding: 150px 0px;
-  background-color: #000;
+  /*background-color: #000;*/
+  background-image: url("../image/bg-galaxy.jpg");
   width: 50%;
   margin: 0;
   order: 3;
@@ -502,6 +557,7 @@ footer {
   padding: 70px;
   font-size: 2rem;
   background: url("../image/footer-bg.jpg");
+  background-repeat: no-repeat;
   background-attachment: fixed;
   align-items: center;
 }
@@ -619,6 +675,8 @@ footer ul {
   text-align: center;
   display: block;
   background: #000;
+  /*background-image: url("../image/bg-galaxy.jpg");*/
+  background-repeat: repeat;
   color: #ff214f;
   color: #fff;
   padding-top: 10rem;
